# modernCppWithTDD

./: CMakeLists.txt  CMakeSettings.json  CharUtil.cpp  CharUtil.h  CharUtilTest.cpp  README.md  Soundex.h  SoundexTest.cpp  StringUtil.cpp  StringUtil.h  StringUtilTest.cpp
cmake/: FindGMock.cmake
